allow users to register/login/logout

--- a/beePong/templates/beePong/base.html
+++ b/beePong/templates/beePong/base.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light mb-4 border">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'learning_logs:index' %}">Dummy Pong</a>
+            <a class="navbar-brand" href="{% url 'beePong:index' %}">Dummy Pong</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
