remove /page, fix 404 path, fixing redirection

--- a/srcs/backend/beePong/templates/beePong/home.html
+++ b/srcs/backend/beePong/templates/beePong/home.html
@@ -1,5 +1,5 @@
 <div>
-	<button onclick="fetchRegisterPage()">Register</button>
+	<button onclick="navigate('/accounts/register')">Register</button>
 	<div id="register"></div>
 	<button onclick="fetchTestData()">test</button>
 	<div id="test"></div>
