--- a/srcs/backend/accounts/templates/registration/register.html
+++ b/srcs/backend/accounts/templates/registration/register.html
@@ -1,4 +1,4 @@
-<form action="{% url 'accounts:register' %}" method='post'>
+<form id="registerForm" onsubmit="handleFormSubmit(event)">
     {% csrf_token %}
     {{ form.as_div }}
 
