--- a/srcs/backend/accounts/templates/registration/register.html
+++ b/srcs/backend/accounts/templates/registration/register.html
@@ -1,4 +1,4 @@
-<form id="registerForm" onsubmit="handleFormSubmit(event)">
+<form id="registerForm" onsubmit=handleFormSubmit(event)>
     {% csrf_token %}
     {{ form.as_div }}
 
