--- a/srcs/backend/beePong/templates/beePong/home.html
+++ b/srcs/backend/beePong/templates/beePong/home.html
@@ -1,6 +1,8 @@
 <div>
 	<button onclick="navigate('/accounts/register')">Register</button>
 	<div id="register"></div>
+	<button onclick="navigate('/accounts/login')">Login</button>
+	<div id="login"></div>
 	<button onclick="fetchTestData()">test</button>
 	<div id="test"></div>
 	<div>Users:</div>
