--- a/srcs/backend/beePong/templates/beePong/home.html
+++ b/srcs/backend/beePong/templates/beePong/home.html
@@ -1,4 +1,4 @@
-<div>
+<section>
 	<button onclick="navigate('/accounts/register')">Register</button>
 	<div id="register"></div>
 	<button onclick="navigate('/accounts/login')">Login</button>
@@ -6,4 +6,4 @@
 	<button onclick="fetchTestData()">test</button>
 	<div id="test"></div>
 	<div>Users:</div>
-</div>
+</section>
