--- a/srcs/backend/accounts/templates/registration/register.html
+++ b/srcs/backend/accounts/templates/registration/register.html
@@ -1,4 +1,4 @@
-<form id="registerForm" onsubmit=handleFormSubmit(event) action="/register/">
+<form id="registerForm" onsubmit=handleFormSubmit(event) action="{% url 'accounts:register' %}">
     {% csrf_token %}
     {{ form.as_div }}
     <button type="submit">Register</button>
