--- a/srcs/backend/beePong/templates/beePong/navbar.html
+++ b/srcs/backend/beePong/templates/beePong/navbar.html
@@ -1,6 +1,6 @@
 <ul>
-	<li><a href="/home" onclick="navigate(event)">Home</a></li>
-	<li><a href="/about" onclick="navigate(event)">About</a></li>
+	<li><a href="{% url 'beePong:home' %}" onclick="navigate(event)">Home</a></li>
+	<li><a href="{% url 'beePong:about' %}" onclick="navigate(event)">About</a></li>
 	{% if user.is_authenticated %}
 	<li>
 		<span>Hello, {{ user.username }}</span>
