--- a/srcs/backend/accounts/templates/registration/register.html
+++ b/srcs/backend/accounts/templates/registration/register.html
@@ -1,5 +1,25 @@
-<form id="registerForm" onsubmit=handleFormSubmit(event) action="{% url 'accounts:register' %}">
-    {% csrf_token %}
-    {{ form.as_div }}
-    <button type="submit">Register</button>
-</form>
+<section>
+    <div class="card">
+        <div class="card__content">
+            <h2 class="card__title">REGISTER</h2>
+            <form id="registerForm" onsubmit=handleFormSubmit(event) action="{% url 'accounts:register' %}">
+                {% csrf_token %}
+                {{ form.as_div }}
+                <div class="form-actions">
+                    <button type="submit" class="button--primary">REGISTER</button>
+                    <a class="font-size--xs">OR LOGIN</a>
+                </div>
+            </form>   
+        </div>
+    </div>
+    <div class="button-group--horizontal">
+        <button class="button--secondary button--with-icon">
+            <span class="font-size--xl">G</span>
+            LOGIN
+        </button>
+        <button class="button--secondary button--with-icon">
+            <img src="/img/42.png" alt="42 logo" class="fortytwo-icon" width="30" height="30">
+            <span>LOGIN</span>
+        </button>
+    </div>
+</section>
