--- a/srcs/backend/beePong/templates/beePong/navbar.html
+++ b/srcs/backend/beePong/templates/beePong/navbar.html
@@ -1,19 +1,21 @@
-<ul>
-	<li><a href="{% url 'beePong:home' %}" onclick="navigate(event)">Home</a></li>
-	<li><a href="{% url 'beePong:about' %}" onclick="navigate(event)">About</a></li>
-	{% if user.is_authenticated %}
-	<li>
-		<span>Hello, {{ user.username }}</span>
-	</li>
-	<li>
-		<form action="{% url 'accounts:logout' %}" onsubmit=handleFormSubmit(event)>
-			{% csrf_token %}
-			<button type="submit">Log out</button>
-		</form>
-	</li>
-	{% else %}
-	<li>
-		<button onclick="navigate('/accounts/login')">Login</button>
-	</li>
-	{% endif %}
-</ul>
+<li>
+	<a href="{% url 'beePong:about' %}" onclick="navigate(event)">ABOUT</a>
+</li>
+{% if user.is_authenticated %}
+<li>
+	<svg width="10" height="10">
+		<circle cx="5" cy="5" r="4" fill="yellow" />
+	</svg>
+	<span>{{ user.username }}</span>
+</li>
+<li>
+	<form action="{% url 'accounts:logout' %}" onsubmit=handleFormSubmit(event)>
+		{% csrf_token %}
+		<button class="button--tertiary" type="submit">LOG OUT</button>
+	</form>
+</li>
+{% else %}
+<li>
+	<button class="button--tertiary" onclick="navigate('/accounts/login')">LOGIN</button>
+</li>
+{% endif %}
