--- a/srcs/frontend/css/card.css
+++ b/srcs/frontend/css/card.css
@@ -1,9 +1,17 @@
+.card__container {
+  width: 350px;
+}
+
+.card__container > div {
+  width: 100%;
+}
+
 .card {
 	outline: 1px solid var(--text-color-main);
 	box-shadow: -10px -10px var(--color-primary);
   overflow: hidden;
-  width: 300px;
   margin: 20px;
+  transform: translateX(-15px);
 }
 
 .card__content {
