--- a/srcs/backend/beePong/templates/beePong/home.html
+++ b/srcs/backend/beePong/templates/beePong/home.html
@@ -1,6 +1,4 @@
 <section>
-	<button onclick="navigate(`{% url 'accounts:register' %}`)">Register</button>
-	<button onclick="navigate(`{% url 'accounts:login' %}`)">Login</button>
 	<div class="card__container">
 		<div class="card">
 			<div class="card__content">
@@ -9,7 +7,7 @@
 					<p>The mighty Pong contest!*</p>
 					<p>Play solo against our vicious AI or gather friends and let the tournament decide who's the queen bee 🐝</p>
 				</div>
-				<button class="button--primary button--with-icon button--full-width" onclick="navigate(`{% url 'beePong:tournament' %}`)">
+				<button class="button--primary button--with-icon button--full-width" onclick="navigate(`{% url 'beePong:tournament' %}`, '/tournament')">
 					<span class="button__text">TOURNAMENT</span>
 					<img src="/img/arrow.svg" alt="arrow" class="arrow-icon">
 				</button>
