--- a/srcs/backend/beePong/templates/beePong/navbar.html
+++ b/srcs/backend/beePong/templates/beePong/navbar.html
@@ -16,6 +16,6 @@
 </li>
 {% else %}
 <li>
-	<button class="button--tertiary" onclick="navigate('/accounts/login')">LOGIN</button>
+	<button class="button--tertiary" onclick="navigate('/accounts/login', '/')">LOGIN</button>
 </li>
 {% endif %}
