--- a/srcs/backend/accounts/templates/registration/register.html
+++ b/srcs/backend/accounts/templates/registration/register.html
@@ -6,9 +6,10 @@
                 <form id="registerForm" onsubmit=handleFormSubmit(event) action="{% url 'accounts:register' %}">
                     {% csrf_token %}
                     {{ form.as_div }}
+                    <input type="hidden" id="redirectUrl" name="redirect_url" value="/"/>
                     <div class="form-actions">
                         <button type="submit" class="button--primary">REGISTER</button>
-                        <a class="font-size--xs">OR LOGIN</a>
+                        <a href="{% url 'accounts:login' %}" class="font-size--xs" onclick="navigate(event, document.getElementById('redirectUrl').value)">OR LOGIN</a>
                     </div>
                 </form>   
             </div>
