--- a/srcs/backend/beePong/templates/beePong/home.html
+++ b/srcs/backend/beePong/templates/beePong/home.html
@@ -1,33 +1,43 @@
+<!-- <script>
+    const params = {
+        'client_id': "{{ client_id }}",
+        'redirect_uri': "{{ redirect_uri }}",
+        'response_type': "{{ response_type }}",
+        'scope': "{{ scope }}",
+        'state': "{{ state }}",
+    };
+    const base_url = 'https://api.intra.42.fr/oauth/authorize?';
+    const query_string = new URLSearchParams(params).toString();
+    const url = base_url + query_string;
+
+    document.getElementById('your_login_button_id').innerHTML = `<a href="${url}">42Login</a>`;
+
+    
+</script> -->
 <section>
     <button onclick="navigate(`{% url 'accounts:register' %}`)">Register</button>
     <button onclick="navigate(`{% url 'accounts:login' %}`)">Login</button>
     <button onclick="fetchTestData()">test</button>
-    <a href="#" onclick="authSite();" >42Login</a>
+    <!-- <a href id="your_login_button_id">42Login</a> -->
+    <div id="your_login_button_id"></div>
 
     <div id="test"></div>
     <div>Users:</div>
 </section>
 
-<script type="text/javascript">
-    // Get the context data from Django
-    var clientId = "{{ client_id }}";
-    var redirectUri = "{{ redirect_uri }}";
-    var responseType = "{{ response_type }}";
-    var scope = "{{ scope }}";
-    var state = "{{ state }}";
+<!-- <script>
+    const params = {
+        'client_id': "{{ client_id }}",
+        'redirect_uri': "{{ redirect_uri }}",
+        'response_type': "{{ response_type }}",
+        'scope': "{{ scope }}",
+        'state': "{{ state }}",
+    };
+    const base_url = 'https://api.intra.42.fr/oauth/authorize?';
+    const query_string = new URLSearchParams(params).toString();
+    const url = base_url + query_string;
 
-    // Base URL for 42 API OAuth
-    var baseUrl = 'https://api.intra.42.fr/oauth/authorize?';
+    document.getElementById('your_login_button_id').innerHTML = `<a href="${url}">42Login</a>`;
 
-    // Function to redirect to 42 login page
-    function authSite() {
-        // Construct the full URL with query parameters
-        var loginUrl = baseUrl +
-                        'client_id=' + encodeURIComponent(clientId) + '&' +
-                        'redirect_uri=' + encodeURIComponent(redirectUri) + '&' +
-                        'response_type=' + encodeURIComponent(responseType) + '&' +
-                        'scope=' + encodeURIComponent(scope) + '&' +
-                        'state=' + encodeURIComponent(state);
-        location.href = loginUrl;
-    }
-</script>
+    
+</script> -->
