--- a/srcs/frontend/css/global.css
+++ b/srcs/frontend/css/global.css
@@ -74,6 +74,12 @@ footer {
   margin-bottom: 10px;
 }
 
+.font--main {
+  font-family: var(--font-family-main);
+	font-weight: 400;
+  font-style: normal;
+}
+
 .font--alt {
   font-family: var(--font-family-alt);
   font-optical-sizing: auto;
@@ -84,6 +90,10 @@ footer {
 
 .font-size--xl {
   font-size: var(--font-size-xl);
+}
+
+.font-size--lg {
+  font-size: var(--font-size-base);
 }
 
 .font-size--md {
