--- a/srcs/frontend/css/card.css
+++ b/srcs/frontend/css/card.css
@@ -11,7 +11,14 @@
 	box-shadow: -10px -10px var(--color-primary);
   overflow: hidden;
   margin: 20px;
-  transform: translateX(-15px);
+  height: 100%;
+}
+
+.card--inactive {
+	outline: 1px solid var(--text-color-main);
+  overflow: hidden;
+  margin: 20px;
+  height: 100%;
 }
 
 .card__content {
