--- a/srcs/frontend/css/global.css
+++ b/srcs/frontend/css/global.css
@@ -4,6 +4,7 @@
 	--color-tertiary: #FFFFFF;
 	--text-color-main: #FFFFFF;
 	--text-color-alt: #000000;
+  --text-color-grey: #515151;
   --background-color: #1F1F1F;
   --font-family-main: "Krona One", sans-serif;
   --font-family-alt: "Kumbh Sans", sans-serif;
