feat:  create tournament page (#39)
* revise the tournament page and add the create tournament page

* add css for tournament page

* add css

* add alias form and revise create tournament form

* fix the radio button for number of players

* add decorator for login_required_json, fix css for tournament page, add data to mock data list after submitting the create tournament form

* add the routing the lobby page

* fix create tournament form css

* refactor

* remove alias endpoint

--- a/srcs/frontend/css/global.css
+++ b/srcs/frontend/css/global.css
@@ -4,6 +4,7 @@
 	--color-tertiary: #FFFFFF;
 	--text-color-main: #FFFFFF;
 	--text-color-alt: #000000;
+  --text-color-grey: #515151;
   --background-color: #1F1F1F;
   --font-family-main: "Krona One", sans-serif;
   --font-family-alt: "Kumbh Sans", sans-serif;
@@ -86,6 +87,10 @@ footer {
   font-size: var(--font-size-xl);
 }
 
+.font-size--lg {
+  font-size: var(--font-size-base);
+}
+
 .font-size--md {
   font-size: var(--font-size-md);
 }
@@ -96,6 +101,10 @@ footer {
 
 .font-size--xs {
   font-size: var(--font-size-xs);
+}
+
+h1 {
+  font-size: var(--font-size-xl);
 }
 
 @media (max-width: var(--breakpoint-md)) {
