--- a/srcs/frontend/css/card.css
+++ b/srcs/frontend/css/card.css
@@ -4,6 +4,7 @@
 
 .card__container > div {
   width: 100%;
+  min-height: 300px;
 }
 
 .card {
@@ -11,7 +12,19 @@
 	box-shadow: -10px -10px var(--color-primary);
   overflow: hidden;
   margin: 20px;
-  transform: translateX(-15px);
+  height: 100%;
+}
+
+.card--inactive {
+	outline: 1px solid var(--text-color-main);
+  overflow: hidden;
+  margin: 20px;
+  height: 100%;
+}
+
+.card--empty {
+	outline: 1px dashed var(--text-color-main);
+  color: var(--text-color-grey);
 }
 
 .card__content {
