--- a/srcs/frontend/css/form.css
+++ b/srcs/frontend/css/form.css
@@ -1,13 +1,5 @@
 form label {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-  white-space: nowrap;
+  display: none;
 }
 
 .form-input {
@@ -33,3 +25,52 @@ form label {
 	font-family: var(--font-family-alt);
 	font-size: var(--font-size-sm);
 }
+
+.radio-group {
+	display: flex;
+	gap: 1rem;
+}
+
+.radio-input {
+	-webkit-appearance: none;
+	outline: none;
+}
+
+.radio-label {
+	display: block;
+	height: 40px;
+	width: 40px;
+	border: 1px solid var(--color-tertiary);
+	position: relative;
+	transition: 0.1s;
+	cursor: pointer;
+}
+
+label > span {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.radio-input:checked + label {
+	background-color: var(--color-tertiary);
+	color: var(--text-color-alt);
+}
+
+.form__input-button-container {
+	display: flex;
+	align-items: center;
+}
+
+.form__input-container {
+	flex-grow: 1;
+	margin-right: 1rem;
+}
+
+.form__input-container > input {
+	margin-bottom: 0em;
+}
+
+
+
