add lobby page and navigate to the game

--- a/srcs/backend/beePong/templates/beePong/tournament_lobby.html
+++ b/srcs/backend/beePong/templates/beePong/tournament_lobby.html
@@ -1,1 +1,28 @@
-<p>tournament lobby</p>
+<section>
+  <h1>BEEPONG CUP IS STARTING IN <span id="countdown">3</span>...</h1>
+  <p>vvagapov vs wchan</p>
+  <div class="tournament__lobby">
+    <div>
+      <div class="match">
+        <div class="name">
+          vvagapov
+        </div>
+      </div>
+      <div class="match">
+        <div class="name">
+          wchan
+        </div>
+      </div>
+      <div class="match">
+        <div class="name">
+          lclerc
+        </div>
+      </div>
+      <div class="match">
+        <div class="name">
+          djames
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
