add form-error-message to alias

--- a/srcs/backend/beePong/templates/beePong/tournament.html
+++ b/srcs/backend/beePong/templates/beePong/tournament.html
@@ -53,7 +53,9 @@
 								<img src="/img/arrow.svg" alt="arrow" class="arrow-icon">
 							</button>
 						</div>
-					</form>  
+					</form>
+					<div class="form-error-message">
+					</div>  
 					{% endif %}
 				</div>
 			</div>
