--- a/srcs/backend/beePong/templates/beePong/pong.html
+++ b/srcs/backend/beePong/templates/beePong/pong.html
@@ -8,11 +8,13 @@
     <script>
         var socket = new WebSocket('ws://' + window.location.host + '/ws/pong/');
 
-        socket.onmessage = function(e) {
+        /* socket.onmessage = function(e) {
             var data = JSON.parse(e.data);
             console.log(data);
             // Update your game field here with data.paddle_x, data.paddle_y, data.ball_x, data.ball_y
-        };
+        }; */
+
+        console.log(window.location.host);
 
         socket.onopen = function(e) {
             console.log('WebSocket connection opened');
@@ -22,7 +24,7 @@
             console.log('WebSocket connection closed');
         };
 
-        function sendGameData(paddle_x, paddle_y, ball_x, ball_y) {
+        /* function sendGameData(paddle_x, paddle_y, ball_x, ball_y) {
             socket.send(JSON.stringify({
                 'paddle_x': paddle_x,
                 'paddle_y': paddle_y,
@@ -39,7 +41,7 @@
             var ball_x = Math.random() * 100;
             var ball_y = Math.random() * 100;
             sendGameData(paddle_x, paddle_y, ball_x, ball_y);
-        }, 1000);
+        }, 1000); */
     </script>
 </body>
 </html>
